# AI-BOT-GPT3-MODEL

./: .vercelignore  DEPLOYMENT.md  FIXED_DEPLOYMENT_GUIDE.md  README_VERCEL.md  chat.py  chat1.py  chat2.py  index.py  prepare_vercel.sh  pyproject.toml  requirements.txt  vercel.json
